<resources>
    <string name="app_name">Trickl</string>

    <!--General-->
    <string name="error_unexpected">Oops! Something went wrong, Sorry</string>
    <string name="error_connecting_to_search_server">Oops! Looks like our search is down.\nPlease try again later, Sorry</string>

    <!--Splash-->
    <!--confluence-->
    <string name="splash_copy_confluence_error">error setting up </string>
    <string name="splash_start_confluence_error">error setting up</string>
    <string name="splash_start_confluence_success">ready to go!</string>
    <string name="splash_socket_timeout_maybe_no_internet">Could not connect to client, you may not be able to browse or download torrents</string>


    <!--permissions-->
    <string name="write_permissions_error">Cannot proceed to use the app without storage permissions</string>


    <string name="torrent_added">Torrent Added</string>

    <!--Torrent Details page-->
    <string name="details_name_title">NAME</string>
    <string name="details_storage_path_title">STORAGE PATH</string>
    <string name="summary_size_title">TOTAL SIZE</string>
    <string name="summary_number_of_files_title">NUMBER OF FILES</string>
    <string name="summary_hash_title">HASH</string>
    <string name="summary_comment_title">COMMENT</string>
    <string name="summary_torrent_creation_date_title">Torrent Creation Date</string>
    <string name="summary_torrent_created_by_title">TORRENT CREATED BY</string>
    <string name="error_get_torrent_info">Error fetching torrent info</string>
    <string name="torrent_hash">Torrent Hash</string>
    <string name="magnet_link">Magnet Link</string>
    <string name="torrent_file">Torrent File</string>
    <string name="loading_torrent_info">Loading Torrent Info....</string>
    <string name="loading_torrent_info_for">Loading Torrent Info For\n%1$s</string>

    <string name="add_torrent_title">Add Torrent</string>

    <!--all torrents-->
    <string name="one_file">1 File</string>
    <string name="x_files">%1$d Files</string>

    <!--Errors-->
    <string name="error_getting_torrent_from_storage">Error retriving torrent from storage</string>
    <string name="error_getting_torrent_file">Error getting file data</string>
    <string name="error_chromecast_not_available">Error, Chromecast is not available on your device! Please update play services or use a devices with google play services</string>
    <string name="error_activity_not_found">Error, No activity found to open this file</string>
    <string name="error_cannot_open_torrent">Error, A problem occurred trying to open the torrent</string>
    <string name="error_search_server_unreachable">Oops, Looks like our search server is down</string>
    <string name="error_all_torrents_some_could_not_be_parsed">%1$d torrents could not be loaded, those torrent files have been deleted. Please manually redownload them</string>
    <string name="error_loading_working_directory_prefs">Error, could not load working directory preference, default storage will be used</string>
    <string name="error_unexpected_error_opening_file">Unexpected error when opening file</string>

    <!--list item download-->
    <string name="file_name">File Name</string>
    <string name="torrent_name">Torrent Name</string>
    <string name="size">Size</string>

    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="keep">Keep</string>
    <string name="cancel">cancel</string>

    <!--delete file-->
    <string name="torrent_deleted">Torrent Deleted</string>
    <string name="file_deleted">File Deleted</string>
    <string name="error_deleting_file">Error deleting file</string>
    <string name="delete_torrent_dialog_text">Would you also like to delete any files downloaded using this torrent?</string>


    <string name="chromecast">Chromecast</string>
    <string name="error_not_connected_to_wifi">Error: Not connected to wifi</string>
    <string name="chromecast_not_connect">Chromecast not connected</string>
    <string name="chromecast_not_on_local_network">Chromecast must be on the same network as your device</string>
    <string name="chromecast_generic_error">Something went wrong while casting</string>
    <string name="error_file_not_supported_by_chromecast">Error: file format not supported by chromecast</string>

    <!--startActivity file-->
    <string name="error_no_activity">No app found to open this type of file</string>
    <string name="dialog_title_no_wifi">Not connected to wifi</string>
    <string name="dialog_content_no_wifi">You are not currency connected to wifi, would you like to download the file anyway?</string>
    <string name="dialog_positive_no_wifi">Download</string>
    <string name="dialog_negative_no_wifi">Cancel</string>

    <!--dialog_add_magnet-->
    <string name="dialog_add_magnet_title">Paste magnet link here</string>

    !--dialog_add_hash-->
    <string name="dialog_add_hash_title">Paste hash link here</string>

    <!--delete torrent dialog-->
    <string name="error_deleting_torrent">Error deleting torrent</string>
    <string name="delete__file_dialog_text">Would you also like to delete the data associated with this file?</string>

    <!--dialog filter browse-->
    <string name="dialog_filter_browse_title">Select the category and sort order to browse by</string>
    <string name="dialog_filter_browse_category_title">Category:</string>
    <string name="dialog_filter_browse_sorted_by_title">Sorted By:</string>
    <string name="dialog_filter_browse_confirm">Confirm</string>
    <string name="dialog_filter_browse_cancel">Cancel</string>

    <!--exit app dialog-->
    <string name="exit_app_dialog_title">Are you sure you want to exit?</string>
    <string name="exit_app_dialog_description">By exiting the app all download, streams and chromecasts will stop.</string>
    <string name="exit_app_dialog_confirm">Exit</string>
    <string name="exit_app_dialog_cancel">Cancel</string>

    <!--Change working directory dialog-->
    <string name="change_working_directory_dialog_title">Would you like to move the files you have already downloaded to the new folder?</string>
    <string name="change_working_directory_dialog_description">We recommend that you move the files</string>
    <string name="change_working_directory_dialog_confirm">Yes</string>
    <string name="change_working_directory_dialog_cancel">No</string>

    <!--Change working directory warning dialog-->
    <string name="change_working_directory_warning_dialog_title">Warning. Changing the working directory requires the app to restart, this will stop all downloads</string>
    <string name="change_working_directory_warning_dialog_description">Are you sure you want to continue?</string>
    <string name="change_working_directory_warning_dialog_confirm">Continue</string>
    <string name="change_working_directory_warning_dialog_cancel">Cancel</string>

    <!--Exit settings without restart-->
    <string name="change_settings_exit_restart_title">Restart required</string>
    <string name="change_settings_exit_restart_description">Settings will not be applied without restarting would you like to restart now?</string>
    <string name="change_settings_exit_restart_negative">Cancel</string>
    <string name="change_settings_exit_restart_positive">Restart</string>

    <!--Chromecast Activity-->
    <string name="chromecast_toolbar_title">Chromecast</string>

    <!--Main Drawer-->
    <string name="search">Search</string>
    <string name="browse">Browse</string>
    <string name="exit">Exit</string>
    <string name="open_directory">Open Directory</string>

    <!--Browse Fragment-->
    <string name="filter_description_category">Category: %1$s</string>
    <string name="filter_description_sorted_by">Sorted By: %1$s</string>
    <string name="search_query_input_hint">Enter search query hint here...</string>
    <string name="clear_search_history">Clear History</string>

    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_title_working_directory">Working Directory</string>
    <string name="settings_title_wifi_only">Wifi Only</string>
    <string name="settings_title_theme">Themes</string>
    <string name="settings_description_wifi_only">Only allow downloading and streaming while on wifi</string>
    <string name="settings_theme_1">Material Dark</string>
    <string name="settings_theme_2">Material Light</string>
    <string name="settings_theme_3">Dark Oled</string>
    <string name="settings_restart_required">Application restart required\n(this will stop all downloads and streams)</string>
    <string name="settings_restart">Restart</string>

    <!--Settings Error-->
    <string name="working_directory_error_cannot_be_child">Error, Cannot use a subdirectory of the current working directory</string>
    <string name="working_direcotory_error_not_folder">Error, New working directory is not a folder</string>
    <string name="working_directory_error_is_downloads">Error, Cannot use downloads folder as working directory</string>
    <string name="working_directory_error_is_not_empty">Error, Cannot use a folder that is not empty</string>
    <string name="settings_error_cannot_get_working_directory">Error, Cannot load current working directory</string>

    <string name="error_could_not_get_torrent_hash">Error, Could not get hash or magnet</string>

</resources>
