<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?fragmentBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?cardBackground"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:id="@+id/layoutSummaryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?cardBackground"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/summaryNameTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/details_name_title"
                        android:textColor="?cardTextColor" />


                    <TextView
                        android:id="@+id/summaryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="?cardTextColor"
                        tools:text="change me" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?cardBackground"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRadius="2dp">


                <LinearLayout
                    android:id="@+id/layoutStoragePath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?cardBackground"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/summaryStoragePathTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/details_storage_path_title"
                        android:textColor="?cardTextColor" />


                    <TextView
                        android:id="@+id/summaryStoragePath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="?cardTextColor"
                        tools:text="change me" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?cardBackground"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRadius="2dp">


                <RelativeLayout
                    android:id="@+id/layoutSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?cardBackground"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/totalSizeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/summarySizeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/summary_size_title"
                            android:textColor="?cardTextColor" />


                        <TextView
                            android:id="@+id/summarySize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textColor="?cardTextColor"
                            tools:text="change me" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignTop="@+id/totalSizeLayout"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_toEndOf="@+id/totalSizeLayout"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/summaryFileCountTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:text="@string/summary_number_of_files_title"
                            android:textColor="?cardTextColor" />


                        <TextView
                            android:id="@+id/summaryFileCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:textColor="?cardTextColor"
                            tools:text="change me" />


                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?cardBackground"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:id="@+id/layoutHash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?cardBackground"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/summaryHashTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/summary_hash_title"
                        android:textColor="?cardTextColor" />


                    <TextView
                        android:id="@+id/summaryHash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="?cardTextColor"
                        tools:text="change me" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>